Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27090

Windows client : ReadConsole (ANSI version) does not work correctly with UTF8 codepage

    XMLWordPrintable

Details

    Description

      This is actually a Windows bug, https://github.com/microsoft/terminal/issues/4551

      We will have to workaround it with ReadConsoleW, and converting to console input codepage,
      in the client.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.